# libteo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  accessor.cpp  admin.cpp  app.cpp  device.cpp  storage.cpp  user.cpp
cases/motion/: motion.conf
include/teo/: teo_client_native.hpp  teo_helper.hpp  teo_logger.hpp  teo_params.hpp
include/teo/DataStore/: MetadataBlock_generated.h
include/teo/Message/: AcquirePreAuthTokenRequest_generated.h  AcquirePreAuthTokenResponse_generated.h  ClaimDeviceDiscoveryResponse_generated.h  ClaimDeviceDiscovery_generated.h  ClaimDeviceRequest_generated.h  ClaimDeviceResponse_generated.h  DataAccessFetch_generated.h  DataAccessResponse_generated.h  DataReencryptionPreRequest_generated.h  DataReencryptionPreResponse_generated.h  DataReencryptionRequest_generated.h  DataReencryptionResponse_generated.h  DataStoreDownloadRequest_generated.h  DataStoreDownloadResponse1_generated.h  DataStoreDownloadResponse2_generated.h  DataStoreSieveCredRequest_generated.h  DataStoreSieveCredResponse_generated.h  DataStoreUploadNotification_generated.h  DataStoreUpload_generated.h  InitializationAdminReply_generated.h  InitializationDeviceInfo_generated.h  InitializationRequest_generated.h  MessageType_generated.h  UtilFetchIpRequest_generated.h  UtilFetchIpResponse_generated.h  UtilFetchStorePubkey_generated.h  UtilHeartbeat_generated.h  UtilRealTimeAccessRequest_generated.h  UtilRealTimeAccessResponse_generated.h  UtilRegisterIp_generated.h  UtilReleaseDevice_generated.h  UtilRemoveRealTimeAccess_generated.h
include/teo/client/: Accessor.hpp  Admin.hpp  Device.hpp  Storage.hpp  User.hpp
src/: CMakeLists.txt  teo_client_native.cpp  teo_helper.cpp  teo_network.cpp
src/client/: Accessor.cpp  Admin.cpp  Device.cpp  Storage.cpp  User.cpp
